# django-auth-ldap-auto-discover-server

./: .gitignore  ldap_auto_discover.py  pyproject.toml  setup.cfg
src/ldap_auto_discover/: __init__.py  ldap_auto_discover.py  ldaps_auto_discover.py
src/ldap_auto_discover_K0HAX.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
