[metadata]
name = ldap-auto-discover-K0HAX
version = 0.0.1
author = Michael Englehorn
author_email = michael+pypi@englehorn.com
description = Automatic discover of LDAP services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/K0HAX/django-auth-ldap-auto-discover-server
project_urls =
    Bug Tracker = https://github.com/K0HAX/django-auth-ldap-auto-discover-server/issues
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

